<?xml version="1.0"?>
<package format="2">
  <name>turtle_control</name>
  <version>0.0.1</version>
  <description>Code to make turtle draw waypoints and follow them</description>

  <maintainer email="andruliu2022@u.northwestern.edu">androo</maintainer>

  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>turtlesim</depend>
  <build_depend>message_generation</build_depend>

</package>
